# rustodo

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2021-01-25-222131_create_todos/: up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
